https://crm.smart-gamma.com/issues/1527 =>Change z-index property for widget;

--- a/wp-content/themes/canvas-child/style.css
+++ b/wp-content/themes/canvas-child/style.css
@@ -566,7 +566,7 @@ ul.products li.product:nth-child(2n) > a >img {
 }
 .widget_recently_viewed_products{
     position:fixed;
-    z-index: 90;
+    z-index: 9000;
     top: 100%;
     left:0;
     width: 100%;
